--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,31 @@
 name = "QLaw"
 uuid = "abf9877f-367a-4f05-a285-16210808b276"
 authors = ["Jordan Murphy <jmurphy6895@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0"
+
+[deps]
+AstroCoords = "27fb9038-6a9d-4e07-8d5d-d0805b53c4cb"
+AstroForceModels = "077569d7-e100-45f3-83e3-c646e23345bd"
+AstroPropagators = "7f2154ff-9684-4686-a457-9182f50d0f5b"
+ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OrdinaryDiffEqAdamsBashforthMoulton = "89bda076-bce5-4f1c-845f-551c83cdda9a"
+OrdinaryDiffEqCore = "bbf590c4-e513-4bbe-9b18-05decba2e5d8"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-julia = "1.10.10"
+AstroCoords = "0.3"
+AstroForceModels = "0.3"
+AstroPropagators = "0.2"
+ComponentArrays = "0.15"
+ForwardDiff = "1"
+OrdinaryDiffEqAdamsBashforthMoulton = "1.5"
+OrdinaryDiffEqCore = "1"
+SciMLBase = "2"
+StaticArrays = "1"
+julia = "1.10, 1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
