--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "QLaw"
 uuid = "abf9877f-367a-4f05-a285-16210808b276"
-authors = ["Jordan Murphy <jmurphy6895@gmail.com> and contributors"]
 version = "0.1.0"
+authors = ["Jordan Murphy <jmurphy6895@gmail.com> and contributors"]
 
 [deps]
 AstroCoords = "27fb9038-6a9d-4e07-8d5d-d0805b53c4cb"
@@ -24,7 +24,7 @@ ComponentArrays = "0.15"
 ForwardDiff = "1"
 Optim = "2"
 OrdinaryDiffEqAdamsBashforthMoulton = "1.5"
-OrdinaryDiffEqCore = "1"
+OrdinaryDiffEqCore = "1, 3"
 SciMLBase = "2"
 StaticArrays = "1"
 julia = "1.10, 1.11"
